mjpeg: interlaced buggy avid fix Fix Ticket362

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>