libavcodec/mjpegdec.c
@@ -1123,8 +1123,7 @@ static int mjpeg_decode_app(MJpegDecodeContext *s)
 //        if (s->first_picture)
 //            printf("mjpeg: workarounding buggy AVID\n");
         i = get_bits(&s->gb, 8); len--;
-        if     (i==2) s->bottom_field= 1;
-        else if(i==1) s->bottom_field= 0;
+        av_log(s->avctx, AV_LOG_DEBUG, "polarity %d\n", i);
 #if 0
         skip_bits(&s->gb, 8);
         skip_bits(&s->gb, 32);
